--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,10 @@
 {
-  "recommendations": []
+  "recommendations": [
+    "editorconfig.editorconfig",
+    "vue.vscode-typescript-vue-plugin",
+    "hollowtree.vue-snippets",
+    "vue.volar",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
+  ]
 }
