--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@8.2.0",
   "scripts": {
     "build": "vite-ssg build",
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --open",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "test": "vitest",
@@ -18,8 +18,12 @@
     "format": "prettier .  --write"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.12",
     "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.23",
+    "axios": "^1.3.5",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
@@ -29,6 +33,7 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.16",
+    "@iconify-json/ic": "^1.1.13",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
@@ -36,11 +41,13 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue-macros/volar": "^0.9.5",
+    "@vue/compiler-sfc": "^3.2.47",
     "@vue/test-utils": "^2.3.2",
     "critters": "^0.0.16",
     "cross-env": "^7.0.3",
     "cypress": "^12.9.0",
     "cypress-vite": "^1.3.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-plugin-cypress": "^2.13.2",
     "https-localhost": "^4.7.1",
@@ -49,11 +56,13 @@
     "markdown-it-shiki": "^0.8.0",
     "pnpm": "^8.2.0",
     "prettier": "^2.8.7",
+    "rollup": "3.2.0",
     "shiki": "^0.14.1",
     "simple-git-hooks": "^2.8.1",
     "taze": "^0.9.1",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.15.2",
+    "unplugin-icons": "^0.16.1",
     "unplugin-vue-components": "^0.24.1",
     "unplugin-vue-macros": "^2.0.0",
     "vite": "^4.2.1",
@@ -70,7 +79,7 @@
     "vite-ssg": "^0.22.2",
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.30.1",
-    "vue-tsc": "^1.2.0",
+    "vue-tsc": "^1.3.8",
     "windicss": "^3.5.6"
   },
   "simple-git-hooks": {
