Added apollo and graphql

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,5 +21,6 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended"
-  ]
+  ],
+  "ignorePatterns": ["gql", "apollo.config.js"]
 }
