--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "packageManager": "pnpm@8.2.0",
   "scripts": {
     "build": "vite-ssg build",
-    "dev": "vite --open",
+    "dev": "vite",
     "preview": "vite preview",
     "preview-https": "serve dist",
     "test": "vitest",
@@ -15,10 +15,12 @@
     "postinstall": "npx simple-git-hooks",
     "sizecheck": "npx vite-bundle-visualizer",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.7.12",
+    "@vue/apollo-composable": "4.0.0-beta.4",
     "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.23",
     "axios": "^1.3.5",
@@ -32,6 +34,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "3.3.0",
     "@iconify-json/carbon": "^1.1.16",
     "@iconify-json/ic": "^1.1.13",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
@@ -80,7 +83,8 @@
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.30.1",
     "vue-tsc": "^1.3.8",
-    "windicss": "^3.5.6"
+    "windicss": "^3.5.6",
+    "@graphql-codegen/client-preset": "3.0.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
