--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "baseUrl": ".",
     "module": "ESNext",
     "target": "ESNext",
-    "lib": ["DOM", "ESNext"],
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "strict": true,
     "esModuleInterop": true,
     "jsx": "preserve",
@@ -25,7 +28,9 @@
       "unplugin-vue-macros/macros-global"
     ],
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": [
+        "src/*"
+      ]
     }
   },
   "vueCompilerOptions": {
@@ -34,5 +39,10 @@
       "@vue-macros/volar/define-slots"
     ]
   },
-  "exclude": ["dist", "node_modules", "cypress", "apollo.config.js", "gql"]
+  "exclude": [
+    "dist",
+    "node_modules",
+    "cypress",
+    "apollo.config.js",
+  ],
 }
