--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "sizecheck": "npx vite-bundle-visualizer",
     "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src",
     "format": "prettier .  --write",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --require dotenv/config --config codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.7.12",
+    "@graphql-codegen/typescript": "3.0.3",
+    "@graphql-codegen/typescript-operations": "3.0.3",
+    "@graphql-codegen/typescript-vue-apollo": "3.3.7",
     "@vue/apollo-composable": "4.0.0-beta.4",
+    "@vue/composition-api": "1.7.1",
     "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.23",
     "axios": "^1.3.5",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "3.3.0",
+    "@graphql-codegen/client-preset": "3.0.0",
     "@iconify-json/carbon": "^1.1.16",
     "@iconify-json/ic": "^1.1.13",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
@@ -83,8 +88,7 @@
     "vite-ssg-sitemap": "^0.4.3",
     "vitest": "^0.30.1",
     "vue-tsc": "^1.3.8",
-    "windicss": "^3.5.6",
-    "@graphql-codegen/client-preset": "3.0.0"
+    "windicss": "^3.5.6"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
