Updated example env

--- a/example.env
+++ b/example.env
@@ -1,2 +1,6 @@
-ANILIST_CLIENT_ID = something
-ANILIST_CLIENT_SECRET = something
+VITE_APP_PORT = 4444
+BASE_URL = localhost
+
+VITE_ANILIST_API_URI = https://graphql.anilist.co
+VITE_ANILIST_CLIENT_ID = something
+VITE_ANILIST_CLIENT_SECRET = something
