--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.3.5",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.34",
     "vue": "^3.2.47",
@@ -43,6 +44,7 @@
     "@iconify-json/carbon": "^1.1.16",
     "@iconify-json/ic": "^1.1.13",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
+    "@types/lodash": "^4.14.194",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
