--- a/package.json
+++ b/package.json
@@ -1,101 +1,40 @@
 {
-  "type": "module",
-  "private": true,
-  "packageManager": "pnpm@8.2.0",
-  "scripts": {
-    "build": "vite-ssg build",
-    "dev": "vite",
-    "preview": "vite preview",
-    "preview-https": "serve dist",
-    "test": "vitest",
-    "test:e2e": "cypress open",
-    "test:unit": "vitest",
-    "typecheck": "vue-tsc --noEmit",
-    "up": "taze major -I",
-    "postinstall": "npx simple-git-hooks",
-    "sizecheck": "npx vite-bundle-visualizer",
-    "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write",
-    "codegen": "graphql-codegen --require dotenv/config --config codegen.ts"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.7.12",
-    "@graphql-codegen/typescript": "3.0.3",
-    "@graphql-codegen/typescript-operations": "3.0.3",
-    "@graphql-codegen/typescript-vue-apollo": "3.3.7",
-    "@vue/apollo-composable": "4.0.0-beta.4",
-    "@vue/composition-api": "1.7.1",
-    "@vueuse/core": "^9.13.0",
-    "@vueuse/head": "^1.1.23",
-    "axios": "^1.3.5",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
-    "lodash": "^4.17.21",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.0.34",
-    "vue": "^3.2.47",
-    "vue-demi": "^0.13.11",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "3.3.0",
-    "@graphql-codegen/client-preset": "3.0.0",
-    "@iconify-json/carbon": "^1.1.16",
-    "@iconify-json/ic": "^1.1.13",
-    "@intlify/unplugin-vue-i18n": "^0.10.0",
-    "@types/lodash": "^4.14.194",
-    "@types/markdown-it-link-attributes": "^3.0.1",
-    "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vue-macros/volar": "^0.9.5",
-    "@vue/compiler-sfc": "^3.2.47",
-    "@vue/test-utils": "^2.3.2",
-    "critters": "^0.0.16",
-    "cross-env": "^7.0.3",
-    "cypress": "^12.9.0",
-    "cypress-vite": "^1.3.1",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.38.0",
-    "eslint-plugin-cypress": "^2.13.2",
-    "https-localhost": "^4.7.1",
-    "lint-staged": "^13.2.1",
-    "markdown-it-link-attributes": "^4.0.1",
-    "markdown-it-shiki": "^0.8.0",
-    "pnpm": "^8.2.0",
-    "prettier": "^2.8.7",
-    "rollup": "3.2.0",
-    "shiki": "^0.14.1",
-    "simple-git-hooks": "^2.8.1",
-    "taze": "^0.9.1",
-    "typescript": "^4.9.5",
-    "unplugin-auto-import": "^0.15.2",
-    "unplugin-icons": "^0.16.1",
-    "unplugin-vue-components": "^0.24.1",
-    "unplugin-vue-macros": "^2.0.0",
-    "vite": "^4.2.1",
-    "vite-bundle-visualizer": "^0.6.0",
-    "vite-plugin-inspect": "^0.7.20",
-    "vite-plugin-pages": "^0.29.0",
-    "vite-plugin-pwa": "^0.14.7",
-    "vite-plugin-vue-component-preview": "^1.1.6",
-    "vite-plugin-vue-inspector": "^3.4.0",
-    "vite-plugin-vue-layouts": "^0.8.0",
-    "vite-plugin-vue-markdown": "^0.22.4",
-    "vite-plugin-webfont-dl": "^3.7.3",
-    "vite-plugin-windicss": "^1.8.10",
-    "vite-ssg": "^0.22.2",
-    "vite-ssg-sitemap": "^0.4.3",
-    "vitest": "^0.30.1",
-    "vue-tsc": "^1.3.8",
-    "windicss": "^3.5.6"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"format": "npm-run-all -p lint:fix prettier",
+		"generate": "nuxt generate",
+		"postinstall": "nuxt prepare",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
+		"prettier": "prettier --write .",
+		"preview": "nuxt preview"
+	},
+	"dependencies": {
+		"@iconify-json/lucide": "^1.2.56",
+		"@iconify-json/simple-icons": "^1.2.42",
+		"@nuxt/scripts": "0.11.9",
+		"@nuxt/ui": "^3.2.0",
+		"@pinia/nuxt": "0.11.1",
+		"@unhead/vue": "^2.0.12",
+		"@vueuse/nuxt": "13.5.0",
+		"nuxt": "^3.17.7",
+		"pinia": "^3.0.3",
+		"vue": "^3.5.17"
+	},
+	"devDependencies": {
+		"@nuxt/eslint": "^1.5.2",
+		"eslint": "^9.30.1",
+		"eslint-plugin-prettier": "^5.5.1",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^3.6.2",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"typescript": "^5.8.3",
+		"vue-tsc": "^3.0.1"
+	},
+	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
