--- a/package.json
+++ b/package.json
@@ -14,27 +14,29 @@
 		"preview": "nuxt preview"
 	},
 	"dependencies": {
-		"@iconify-json/lucide": "^1.2.56",
-		"@iconify-json/simple-icons": "^1.2.42",
-		"@nuxt/scripts": "0.11.9",
-		"@nuxt/ui": "^3.2.0",
-		"@pinia/nuxt": "0.11.1",
+		"@iconify-json/carbon": "^1.2.11",
+		"@iconify-json/lucide": "^1.2.58",
+		"@iconify-json/simple-icons": "^1.2.44",
+		"@nuxt/scripts": "0.11.10",
+		"@nuxt/ui": "^3.3.0",
+		"@pinia/nuxt": "0.11.2",
 		"@unhead/vue": "^2.0.12",
-		"@vueuse/nuxt": "13.5.0",
-		"nuxt": "^3.17.7",
+		"@vueuse/nuxt": "13.6.0",
+		"nuxt": "^4.0.2",
 		"pinia": "^3.0.3",
-		"vue": "^3.5.17"
+		"pinia-plugin-persistedstate": "^4.4.1",
+		"vue": "^3.5.18"
 	},
 	"devDependencies": {
-		"@nuxt/eslint": "^1.5.2",
-		"eslint": "^9.30.1",
-		"eslint-plugin-prettier": "^5.5.1",
+		"@nuxt/eslint": "^1.7.1",
+		"eslint": "^9.32.0",
+		"eslint-plugin-prettier": "^5.5.3",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^3.6.2",
-		"prettier-plugin-organize-imports": "^4.1.0",
+		"prettier-plugin-organize-imports": "^4.2.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"typescript": "^5.8.3",
-		"vue-tsc": "^3.0.1"
+		"vue-tsc": "^3.0.4"
 	},
 	"packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
